# stereorepo

./: .gitignore  README.md  how_to_clone_projects.md
algo_lib_rs/src/: doubly_linked_list.rs  lib.rs  node_double.rs
cocktails-api/: README.md
dir_compression/tga_comp/src/: bitstream.hpp  compression.cpp  compression.hpp  main.cpp  tga.cpp  tga.hpp
dir_cybersecurity/: README.md
dir_cybersecurity/dir_cryptography/: README.md  crackingCipherText.ipynb
dir_cybersecurity/fisml/: README.md
dir_ml/: README.md
dir_ml/15_puzzle_bot/: README.md
dir_ml/dbscan/: README.md
dir_ml/digits_recognizer/: README.md  digitsRecognizer.ipynb
dir_ml/k_means/: README.md
dir_ml/k_means_img_compression/: README.md  k_mean.ipynb
dir_ml/tic_tac_toe_4x4_server_bot/: README.md
dir_ml/visualize_cnn/: README.md  main.ipynb
dir_rust/: README.md
dir_rust/minigrep/: README.md
dir_rust/queue_system/: README.md
dir_rust/rust_cli/: README.md
dir_tools/mono-clone/: README.md  mono-clone
dir_tools/pattern_search/: README.md
dir_tools/repos-cli/: .gitignore  .repos-cli.toml  .repos-cli.toml.example  Cargo.toml  INSTALL.md  README.md
dir_tools/repos-cli/src/: auth.rs  config.rs  github.rs  main.rs  readme.rs
dir_tools/repos-cli/src/generators/: badges.rs  changelog.rs  dependencies.rs  docker.rs  mod.rs  structure.rs
dir_tools/repos-cli/tests/: integration_tests.rs
ecommerce_project/: README.md
ecommerce_project/ecommerce_api/: README.md
ecommerce_project/ecommerce_frontend/: README.md
hs_pars_interpret_whilelan/: .gitignore  CHANGELOG.md  README.md  stack.yaml  while-lang.cabal
hs_pars_interpret_whilelan/examples/: factorial.while  fibonacci.while
hs_pars_interpret_whilelan/src/: Main.hs
hs_pars_interpret_whilelan/src/Language/While/: Interpreter.hs  Lexer.hs  Parser.hs  Repl.hs  Syntax.hs
javaInterpreter/: README.md  build.bat  build.sh  run.bat  run.sh  test.lox
javaInterpreter/tool/: GenerateAst.java
py_jp/: README.md
slice_orch/: README.md
stereorepo_cli/: Cargo.toml  README.md
stereorepo_cli/src/: main.rs
webserver_cache_rdma/: README.md
(+14 files in other folders)
