cabal-version:       2.2

name:                while-lang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/while-lang#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable while-lang
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Language.While.Syntax
                     , Language.While.Lexer
                     , Language.While.Parser
                     , Language.While.Interpreter
                     , Language.While.Repl
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , directory
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/while-lang
