[package]
name = "repos-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
git2 = "0.20.2"
keyring = "3.6.3"
octocrab = "0.48.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
